deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authors
  labels:
    app: authors
spec:
  selector:
    matchLabels:
      app: authors
  replicas: 1 
  template:
    metadata:
      labels:
        app: authors
    spec:
      containers:
      - name: authors
        image: quay.io/osmanburucuibm/authors:@version.name@
        ports:
        - containerPort: 3000
        livenessProbe:
          exec:
            command: ["sh", "-c", "curl -s http://localhost:3000/"]
          initialDelaySeconds: 20
        readinessProbe:
          exec:
            command: ["sh", "-c", "curl -s http://localhost:3000/health | grep -q authors"]
          initialDelaySeconds: 40
        imagePullPolicy: Always
      restartPolicy: Always
---
