deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authors-service
  labels:
    app: authors
spec:
  selector:
    app: authors
  ports:
    - port: 3000
      name: http
      protocol: TCP
  type: NodePort
---
